--- a/JAVA/0203_상속_캡슐화_다형성_오버로딩_오버라이딩.md
+++ b/JAVA/0203_상속_캡슐화_다형성_오버로딩_오버라이딩.md
@@ -272,15 +272,17 @@ public class Test {
 > 한 클래스 내에서 같은 이름의 method가 다수 존재하는 것
 
 ```java
-class Printer{
-    public void print (Circle c){ //shadow effect 없음
-        c.radius = 5;
-        c.area();
-    }	
+class A{
+    public A (int x){
+        super();
+    }
     
-    public void print (Rectangle r){ 
-        r.w = 2; r.h = 3;
-        r.area();
+    public A (int i){
+        super();	//에러 - 오버로딩 규칙 X
+    }				//int i 와 int x 를 같은 argument 로 인식
+    
+    public A (byte a){
+        super();	//가능
     }
 }
 ```
