--- a/JAVA/0203_상속_캡슐화_다형성_오버로딩_오버라이딩.md
+++ b/JAVA/0203_상속_캡슐화_다형성_오버로딩_오버라이딩.md
@@ -256,7 +256,7 @@ public class Test {
 
 > super 의 method 를 sub 에서 다시 정의하는 것.
 >
-> shadow effect 를 우회하기 위함 => 확장성, 성능 향상 위해
+> shadow effect 를 우회하기 위함 => **확장성, 성능 향상** 위해
 
 - return type, argument 등 모두 같아야 함
 - 내용 재정의 O  (구조 재정의 X)
@@ -287,8 +287,8 @@ class A{
 }
 ```
 
-- shadow effect 를 해제하므로 성능은 높아지지만 확장성, 사용성이 매우 떨어짐
-- argument 가 무조건 달라야함
+- shadow effect 를 해제하므로 성능은 높아지지만 확장성 매우 떨어짐
+- **argument 가 달라야함**
 
 
 
@@ -296,13 +296,11 @@ class A{
 
 > 하향 캐스팅을 가능하게 해주는 예약어
 
-
-
 위 코드들은 객체에 따라 메소드의 파라미터 값을 다르게 선언해야하는 불편함이 있었다. 
 
 아래처럼 `Object o` 를 파라미터로 받은 후, `instanceof `와 객체별 casting을 사용할 수 있다.
 
-그러나 모든 class의 root는 Object이므로 show.airShow("java") 처럼 예상치 못한 결과를 얻을 수 있는 단점이 존재한다. 
+그러나 모든 class의 root는 Object이므로예상치 못한 결과를 얻을 수 있는 단점이 존재한다. 
 
 ```java
 public class Show {
